[package]
name = "rustjs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.15.0"
napi-derive = "2.15.0"

[build-dependencies]
napi-build = "2.0.0"

[target.'cfg(target_os = "macos")'.build]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]